# UdpTest

./: CMakeLists.txt  README.md  runClient.sh  runServer.sh  task.txt
Client/: CMakeLists.txt  UdpClient.cpp  UdpClient.h  main.cpp
Common/: CMakeLists.txt  UdpCommon.cpp  UdpData.cpp  UdpData.h  UdpWorker.cpp  UdpWorker.h  Utils.cpp  Utils.h
Server/: CMakeLists.txt  UdpServer.cpp  UdpServer.h  main.cpp
